[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Mimiry"
version = "0.2.1"
description = "Python SDK for serverless compute"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [{ name = "Oliver", email = "oliversorensen39@gmail.com" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "httpx>=0.27",
    "cloudpickle>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.5",
]

[project.urls]
Homepage = "https://mimiry.com"
Repository = "https://github.com/OTSorensen/mimiry-python-sdk"
Issues = "https://github.com/OTSorensen/mimiry-python-sdk/issues"

[project.scripts]
mimiry = "mimiry._cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
